--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^19.2.4",
     "@google/genai": "^1.38.0",
     "react": "^19.2.4",
-    "jspdf": "^2.5.1"
+    "jspdf": "^2.5.1",
+    "vite": "^7.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
